@@ -1,3 +1,8 @@
+2014/01/10 (version 1.23)
+
+- Fixed wrong notes folder.
+
+
 2014/01/09 (version 1.22)
 
 - Fixed a bug with tasks that have no project.
